--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
+<h1>Tic Tac Toe</h1>
+<div id="gameboard">
 
-
-
-
-
-
+</div>
+<div id="controls">
+    <input type="text" id="player1" placeholder="Player 1 Name">
+    <input type="text" id="player2" placeholder="Player 2 Name">
+    <button id="start-game">Start Game</button>
+    <button id="reset-game">Reset Game</button>
+</div>
+<div id="message"></div>
+<div id="result-display"></div>
 <script src="app.js"></script>
 </body>
 </html>
