--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
-<div id="gameboard">
-    <div class="cell x" data-cell></div>
-    <div class="cell circle" data-cell></div>
+<div class='board x' id="gameboard">
+    <div class="cell" data-cell></div>
+    <div class="cell" data-cell></div>
     <div class="cell" data-cell></div>
     <div class="cell" data-cell></div>
     <div class="cell" data-cell></div>
