--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
-<div class='board x' id="gameboard">
+<div class='board' id="gameboard">
     <div class="cell" data-cell></div>
     <div class="cell" data-cell></div>
     <div class="cell" data-cell></div>
